--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   chat: ^0.0.1-dev.placeholder
   chat_bubbles: ^1.6.0
+  firebase_messaging: ^15.1.5
   
 
 dev_dependencies:
