--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   chat: ^0.0.1-dev.placeholder
   chat_bubbles: ^1.6.0
   firebase_messaging: ^15.1.5
+  http: ^1.2.2
   
 
 dev_dependencies:
